<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/verboseView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:drawablePadding="8dp"
    android:layoutAnimation="@anim/layout_controller_scale"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/vendor_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/lbl_vendor"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/vendor_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:text="@string/lbl_unknown" />

    <TextView
        android:id="@+id/power_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/lbl_powerconsumption"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/power_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:text="@string/lbl_unknown" />

    <TextView
        android:id="@+id/resolution_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/lbl_sensor_resolution"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/resolution_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:text="@string/lbl_unknown" />

    <TextView
        android:id="@+id/version_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/lbl_sensor_version"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/version_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:text="@string/lbl_unknown" />

    <TextView
        android:id="@+id/delay_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/lbl_min_delay"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/delay_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:text="@string/lbl_unknown" />

    <TextView
        android:id="@+id/range_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/lbl_range"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/range_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="8dp"
        android:text="@string/lbl_unknown" />

</LinearLayout>
